spacing fix

--- a/app/styles/areas/_settings.scss
+++ b/app/styles/areas/_settings.scss
@@ -115,11 +115,6 @@
         display: none;
     }
 
-    &__file-buttons {
-        button ~ button {
-            margin-left: $small-spacing;
-        }
-    }
     &__file-master-pass-warning,
     &__file-confirm-master-pass-warning {
         font-weight: normal;
